--- a/CriaTerneros2022/.classpath
+++ b/CriaTerneros2022/.classpath
@@ -1,67 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/all-themes-1.0.10.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-9.0.4">
+		<attributes>
+			<attribute name="module" value="true"/>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/all-themes-1.0.10.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/commons-fileupload-1.4.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/commons-io-2.11.0.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.11.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/font-awesome-5.15.1.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/font-awesome-5.15.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/fontbox-2.0.24.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/fontbox-2.0.24.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/CriaTerneros2022/WebContent/WEB-INF/lib/gson-2.8.6.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.8.6.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/CriaTerneros2022/WebContent/WEB-INF/lib/gson-2.8.8.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.8.8.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/pdfbox-2.0.24.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.faces-api-2.3.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/pdfbox-tools-2.0.24.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/pdfbox-2.0.24.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/primefaces-8.0.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/pdfbox-tools-2.0.24.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/primefaces-10.0.0.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-10.0.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/workspace/CriaTerneros2022/WebContent/WEB-INF/lib/sunny-1.0.10.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-8.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/javax.faces-api-2.3.jar/javax.faces-api-2.3.jar">
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/sunny-1.0.10.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -69,12 +75,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 20.0 Runtime">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web;jst.jsf;jpt.jpa"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-9.0.4">
-		<attributes>
-			<attribute name="module" value="true"/>
-			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="src"/>
