--- a/CriaTerneros2022/src/EJB/.gitignore
+++ b/CriaTerneros2022/src/EJB/.gitignore
@@ -1,1 +1,10 @@
 /PartoEJBLocal.class
+/AbstractFacade.class
+/EnfermedadEJB.class
+/EnfermedadEJBLocal.class
+/GuacheraEJB.class
+/GuacheraEJBLocal.class
+/TerneroEJB.class
+/TerneroEJBLocal.class
+/UsuarioEJB.class
+/UsuarioEJBLocal.class
