--- a/CriaTerneros2022/.classpath
+++ b/CriaTerneros2022/.classpath
@@ -74,7 +74,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 20.0 Runtime">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.web;jst.jsf;jpt.jpa"/>
+			<attribute name="owner.project.facets" value="jst.jsf;jst.web;jpt.jpa"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="src"/>
